update typescript and eslint parser and add rule for import ordering

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,12 +19,14 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "import/order": "error",
     "react/jsx-boolean-value": [
       "error",
       "always"
     ],
     "react/no-multi-comp": "error",
     "react/self-closing-comp": "error",
+    "react/prop-types": "off",
     "@typescript-eslint/member-delimiter-style": [
       "error",
       {
