--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@testing-library/user-event": "^12.1.6",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
-    "@types/react": "^16.9.49",
+    "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "classcat": "^4.1.0",
     "node-sass": "^4.14.1",
-    "prettier": "^2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^4.0.0-next.98",
@@ -22,7 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint . --ext js,jsx,ts,tsx",
+    "lint": "eslint . --ext js,jsx,ts,tsx && stylelint '**/*.scss'",
     "eject": "react-scripts eject",
     "format:check": "npx prettier --check \"**/*.{ts,tsx,js,json,css,scss}\""
   },
@@ -31,8 +31,10 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
+      "> .5% and last 2 versions,",
+      "not Android > 0",
+      "not ie > 0",
+      "Firefox ESR",
       "not op_mini all"
     ],
     "development": [
@@ -46,6 +48,12 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
-    "eslint-plugin-react-hooks": "^4.1.2"
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.1.2",
+    "stylelint": "^13.7.2",
+    "stylelint-config-property-sort-order-smacss": "^6.3.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-sass-guidelines": "^7.1.0",
+    "stylelint-config-standard": "^20.0.0"
   }
 }
