--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+BROWSER=firefox
 REACT_APP_AUTH0_DOMAIN=secret
 REACT_APP_AUTH0_CLIENT_ID=secret
-BROWSER=firefox
+REACT_APP_GRAPHQL_URI=https://example.com
+REACT_APP_LOG_GRAPHQL_QUERIES=true
