--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.2",
     "@auth0/auth0-react": "^1.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.6",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.2",
+    "@types/ramda": "^0.27.23",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "apollo-link-logger": "^2.0.0",
     "classcat": "^4.1.0",
+    "graphql": "^15.3.0",
     "node-sass": "^4.14.1",
+    "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^4.0.0-next.98",
