--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@apollo/client": "^3.2.2",
     "@auth0/auth0-react": "^1.1.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.6",
@@ -14,9 +16,7 @@
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "apollo-link-logger": "^2.0.0",
-    "classcat": "^4.1.0",
     "graphql": "^15.3.0",
-    "node-sass": "^4.14.1",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -54,11 +54,6 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-react-hooks": "^4.1.2",
-    "prettier": "^2.1.2",
-    "stylelint": "^13.7.2",
-    "stylelint-config-property-sort-order-smacss": "^6.3.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-sass-guidelines": "^7.1.0",
-    "stylelint-config-standard": "^20.0.0"
+    "prettier": "^2.1.2"
   }
 }
