--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/react-dom": "^16.9.8",
     "apollo-link-logger": "^2.0.0",
     "graphql": "^15.3.0",
+    "history": "^5.0.0",
     "ramda": "^0.27.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.0-next.98",
     "typescript": "^4.0.3"
   },
@@ -27,7 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint . --ext js,jsx,ts,tsx && stylelint '**/*.scss'",
+    "lint": "eslint . --ext js,jsx,ts,tsx",
     "eject": "react-scripts eject",
     "format:check": "npx prettier --check \"**/*.{ts,tsx,js,json,css,scss}\""
   },
