--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BROWSER=firefox
+REACT_APP_AUTH0_AUDIENCE=https://example.com
 REACT_APP_AUTH0_DOMAIN=secret
 REACT_APP_AUTH0_CLIENT_ID=secret
 REACT_APP_GRAPHQL_URI=https://example.com
