--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@types/ramda": "^0.27.23",
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.8",
     "apollo-link-logger": "^2.0.0",
+    "formik": "^2.2.1",
     "graphql": "^15.3.0",
     "history": "^5.0.0",
     "ramda": "^0.27.1",
@@ -23,7 +26,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.0-next.98",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "uuid": "^8.3.1",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
