Fix formatting and provide npm script to automate this

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,13 +11,7 @@
     "prettier",
     "prettier/react"
   ],
-  "plugins": [
-    "react",
-    "react-hooks",
-    "jest",
-    "import",
-    "@typescript-eslint"
-  ],
+  "plugins": ["react", "react-hooks", "jest", "import", "@typescript-eslint"],
   "rules": {
     "import/order": [
       "error",
@@ -27,10 +21,7 @@
         }
       }
     ],
-    "react/jsx-boolean-value": [
-      "error",
-      "always"
-    ],
+    "react/jsx-boolean-value": ["error", "always"],
     "react/no-multi-comp": "error",
     "react/self-closing-comp": "error",
     "react/prop-types": "off",
