--- a/package.json
+++ b/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.2.2",
+    "@apollo/client": "^3.2.5",
     "@auth0/auth0-react": "^1.1.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.0.4",
-    "@testing-library/user-event": "^12.1.6",
-    "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "@types/ramda": "^0.27.23",
-    "@types/react": "^16.9.50",
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.2",
+    "@types/ramda": "^0.27.30",
+    "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.8",
@@ -22,10 +22,10 @@
     "graphql": "^15.3.0",
     "history": "^5.0.0",
     "ramda": "^0.27.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "^4.0.0-next.98",
+    "react-scripts": "^4.0.0",
     "typescript": "^4.0.3",
     "uuid": "^8.3.1",
     "yup": "^0.29.3"
@@ -57,11 +57,11 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/parser": "^4.3.0",
-    "eslint-config-prettier": "^6.12.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
-    "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.1.2"
   }
 }
